--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "blockchain": {
+    "versioncontrol": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/blockchain",
+            "outputPath": "dist/versioncontrol",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,14 +72,14 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "proxyConfig": "proxy.conf.json",
-            "browserTarget": "blockchain:build"
+            "browserTarget": "versioncontrol:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "blockchain:build:production"
+              "browserTarget": "versioncontrol:build:production"
             },
             "development": {
-              "browserTarget": "blockchain:build:development"
+              "browserTarget": "versioncontrol:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "blockchain:build"
+            "browserTarget": "versioncontrol:build"
           }
         },
         "test": {
@@ -111,5 +111,5 @@
       }
     }
   },
-  "defaultProject": "blockchain"
+  "defaultProject": "versioncontrol"
 }
